--- a/seagull_story.ipynb
+++ b/seagull_story.ipynb
@@ -9,28 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/mrpio/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "None of PyTorch, TensorFlow >= 2.0, or Flax have been found. Models won't be available and only tokenizers, configuration and file/data utilities can be used.\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-30T13:10:15.168665Z",
+     "start_time": "2024-12-30T13:10:15.155314Z"
     }
-   ],
+   },
    "source": [
-    "import json\n",
     "import os\n",
-    "# import torch\n",
-    "# from torch.utils.data import Dataset, DataLoader\n",
-    "from transformers import DebertaTokenizer, DebertaForSequenceClassification, AdamW, get_scheduler\n",
+    "import random\n",
+    "from random import shuffle\n",
+    "\n",
+    "import numpy as np\n",
+    "import torch\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from tqdm import tqdm"
-   ]
+    "from tabulate import tabulate\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from tqdm import tqdm\n",
+    "from transformers import DebertaTokenizer, DebertaForSequenceClassification, AdamW, get_scheduler"
+   ],
+   "outputs": [],
+   "execution_count": 53
   },
   {
    "cell_type": "markdown",
@@ -41,9 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-30T12:23:38.100102Z",
+     "start_time": "2024-12-30T12:23:38.088796Z"
+    }
+   },
    "source": [
     "CLASSES = {\n",
     "    'yes': 0,\n",
@@ -55,11 +57,25 @@
     "MODEL_NAME = \"microsoft/deberta-base\"\n",
     "BATCH_SIZE = 16\n",
     "EPOCHS = 3\n",
-    "LEARNING_RATE = 2e-5\n",
+    "LEARNING_RATE = 5e-5\n",
     "MAX_LENGTH = 512\n",
-    "# DEVICE = torch.device(\n",
-    "#     \"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")"
-   ]
+    "DEVICE = torch.device(\n",
+    "    \"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "DEVICE"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -70,66 +86,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-30T12:33:02.118280Z",
+     "start_time": "2024-12-30T12:33:00.862982Z"
+    }
+   },
    "source": [
     "story = open(STORY_FILE).read().replace(\"\\n\\n\", \"\\n\").replace(\"\\n\", \" \")\n",
-    "tokenizer = DebertaTokenizer.from_pretrained(MODEL_NAME)\n",
-    "# model = DebertaForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=3)\n",
-    "# model.to(DEVICE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+    "tokenizer = DebertaTokenizer.from_pretrained(MODEL_NAME, do_lower_case=True)\n",
+    "model = DebertaForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=3)\n",
+    "model.to(DEVICE)\n",
+    "pass"
+   ],
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'input_ids': [1, 6462, 2, 40018, 2, 0, 0, 0], 'token_type_ids': [0, 0, 0, 1, 1, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 0, 0, 0]}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of DebertaForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-base and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
     }
    ],
-   "source": [
-    "tokenizer('story', 'question', truncation=True, max_length=8, padding=\"max_length\")"
-   ]
+   "execution_count": 26
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-30T13:14:09.023942Z",
+     "start_time": "2024-12-30T13:14:09.015578Z"
+    }
+   },
    "source": [
     "class NLIDataset(Dataset):\n",
-    "    def __init__(self, data, tokenizer):\n",
+    "    def __init__(self, data):\n",
     "        self.data = data\n",
-    "        self.tokenizer = tokenizer\n",
+    "\n",
+    "    def print(self):\n",
+    "        index = random.randint(0, len(self.data) - 1)\n",
+    "        encoded = self[index]\n",
+    "        print(encoded[\"input_ids\"].shape)\n",
+    "        tokens = tokenizer.decode(encoded[\"input_ids\"])\n",
+    "        token_ids = [i.numpy() for i in encoded[\"input_ids\"]]\n",
+    "        attention = [i.numpy() for i in encoded[\"attention_masks\"]]\n",
+    "\n",
+    "        table = np.array([tokens, token_ids, attention]).T\n",
+    "        print(self.data[index])\n",
+    "        print(tabulate(table,\n",
+    "                       headers=['Tokens', 'Token IDs', 'Attention Mask'],\n",
+    "                       tablefmt='fancy_grid'))\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        item = self.data[idx]\n",
-    "        passage = story\n",
     "        question = item[\"question\"]\n",
     "        label = item[\"answer\"]\n",
     "\n",
-    "        inputs = self.tokenizer(\n",
-    "            story, question, truncation=True, max_length=MAX_LENGTH, padding=\"max_length\", return_tensors=\"pt\"\n",
+    "        encoded_dict = tokenizer.encode_plus(\n",
+    "            'story', question,\n",
+    "            truncation=True,\n",
+    "            add_special_tokens=True,\n",
+    "            max_length=MAX_LENGTH,\n",
+    "            padding=\"max_length\",\n",
+    "            return_attention_mask=True,\n",
+    "            return_tensors='pt',\n",
     "        )\n",
     "\n",
     "        return {\n",
-    "            \"input_ids\": inputs[\"input_ids\"].squeeze(0),\n",
-    "            \"attention_mask\": inputs[\"attention_mask\"].squeeze(0),\n",
-    "            \"label\": torch.tensor(label, dtype=torch.long)\n",
+    "            \"input_ids\": encoded_dict[\"input_ids\"],\n",
+    "            \"token_type_ids\": encoded_dict[\"token_type_ids\"].unsqueeze(0),\n",
+    "            \"attention_mask\": encoded_dict[\"attention_mask\"].unsqueeze(0),\n",
+    "            \"label\": torch.tensor(label)\n",
     "        }"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 65
   },
   {
    "cell_type": "markdown",
@@ -139,36 +174,75 @@
    ]
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-30T13:14:11.323287Z",
+     "start_time": "2024-12-30T13:14:11.251620Z"
+    }
+   },
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "source": "NLIDataset(train_set).print()",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Read 232 \"yes\" questions\n",
-      "Read 112 \"irrelevant\" questions\n",
-      "Read 116 \"no\" questions\n"
+      "torch.Size([1, 512])\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[66], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[43mNLIDataset\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtrain_set\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mprint\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[65], line 9\u001B[0m, in \u001B[0;36mNLIDataset.print\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m      7\u001B[0m encoded \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m[index]\n\u001B[0;32m      8\u001B[0m \u001B[38;5;28mprint\u001B[39m(encoded[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124minput_ids\u001B[39m\u001B[38;5;124m\"\u001B[39m]\u001B[38;5;241m.\u001B[39mshape)\n\u001B[1;32m----> 9\u001B[0m tokens \u001B[38;5;241m=\u001B[39m \u001B[43mtokenizer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mdecode\u001B[49m\u001B[43m(\u001B[49m\u001B[43mencoded\u001B[49m\u001B[43m[\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43minput_ids\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     10\u001B[0m token_ids \u001B[38;5;241m=\u001B[39m [i\u001B[38;5;241m.\u001B[39mnumpy() \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m encoded[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124minput_ids\u001B[39m\u001B[38;5;124m\"\u001B[39m]]\n\u001B[0;32m     11\u001B[0m attention \u001B[38;5;241m=\u001B[39m [i\u001B[38;5;241m.\u001B[39mnumpy() \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m encoded[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mattention_masks\u001B[39m\u001B[38;5;124m\"\u001B[39m]]\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\transformers\\tokenization_utils_base.py:3843\u001B[0m, in \u001B[0;36mPreTrainedTokenizerBase.decode\u001B[1;34m(self, token_ids, skip_special_tokens, clean_up_tokenization_spaces, **kwargs)\u001B[0m\n\u001B[0;32m   3840\u001B[0m \u001B[38;5;66;03m# Convert inputs to python lists\u001B[39;00m\n\u001B[0;32m   3841\u001B[0m token_ids \u001B[38;5;241m=\u001B[39m to_py_obj(token_ids)\n\u001B[1;32m-> 3843\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_decode(\n\u001B[0;32m   3844\u001B[0m     token_ids\u001B[38;5;241m=\u001B[39mtoken_ids,\n\u001B[0;32m   3845\u001B[0m     skip_special_tokens\u001B[38;5;241m=\u001B[39mskip_special_tokens,\n\u001B[0;32m   3846\u001B[0m     clean_up_tokenization_spaces\u001B[38;5;241m=\u001B[39mclean_up_tokenization_spaces,\n\u001B[0;32m   3847\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m   3848\u001B[0m )\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\transformers\\tokenization_utils.py:1091\u001B[0m, in \u001B[0;36mPreTrainedTokenizer._decode\u001B[1;34m(self, token_ids, skip_special_tokens, clean_up_tokenization_spaces, spaces_between_special_tokens, **kwargs)\u001B[0m\n\u001B[0;32m   1081\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m_decode\u001B[39m(\n\u001B[0;32m   1082\u001B[0m     \u001B[38;5;28mself\u001B[39m,\n\u001B[0;32m   1083\u001B[0m     token_ids: Union[\u001B[38;5;28mint\u001B[39m, List[\u001B[38;5;28mint\u001B[39m]],\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m   1087\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m   1088\u001B[0m ) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m \u001B[38;5;28mstr\u001B[39m:\n\u001B[0;32m   1089\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_decode_use_source_tokenizer \u001B[38;5;241m=\u001B[39m kwargs\u001B[38;5;241m.\u001B[39mpop(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124muse_source_tokenizer\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;28;01mFalse\u001B[39;00m)\n\u001B[1;32m-> 1091\u001B[0m     filtered_tokens \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mconvert_ids_to_tokens\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtoken_ids\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mskip_special_tokens\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mskip_special_tokens\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1092\u001B[0m     \u001B[38;5;66;03m# If given is a single id, prevents splitting the string in upcoming loop\u001B[39;00m\n\u001B[0;32m   1093\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(filtered_tokens, \u001B[38;5;28mstr\u001B[39m):\n",
+      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\transformers\\tokenization_utils.py:1066\u001B[0m, in \u001B[0;36mPreTrainedTokenizer.convert_ids_to_tokens\u001B[1;34m(self, ids, skip_special_tokens)\u001B[0m\n\u001B[0;32m   1064\u001B[0m tokens \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m   1065\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m index \u001B[38;5;129;01min\u001B[39;00m ids:\n\u001B[1;32m-> 1066\u001B[0m     index \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mindex\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1067\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m skip_special_tokens \u001B[38;5;129;01mand\u001B[39;00m index \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mall_special_ids:\n\u001B[0;32m   1068\u001B[0m         \u001B[38;5;28;01mcontinue\u001B[39;00m\n",
+      "\u001B[1;31mTypeError\u001B[0m: int() argument must be a string, a bytes-like object or a real number, not 'list'"
      ]
     }
    ],
+   "execution_count": 66
+  },
+  {
+   "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-30T13:01:18.933126Z",
+     "start_time": "2024-12-30T13:01:18.921792Z"
+    }
+   },
    "source": [
     "dataset: list[dict] = []\n",
     "for file in CLASSES.keys():\n",
-    "    with open(os.path.join(DATASET_PATH, '{file}.txt')) as f:\n",
+    "    with open(os.path.join(DATASET_PATH, f'{file}.txt')) as f:\n",
     "        lines = set(f.readlines())\n",
     "        print(f'Read {len(lines)} \"{file}\" questions')\n",
     "        dataset.extend(map(lambda e: {'question': e.replace(\n",
     "            '\\n', ''), 'answer': CLASSES[file]}, lines))\n",
-    "        \n",
-    "trainset, testset = train_test_split(dataset, test_size=0.1, random_state=42)\n",
-    "train_dataset = NLIDataset(trainset, tokenizer)\n",
-    "val_dataset = NLIDataset(testset, tokenizer)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=BATCH_SIZE, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=BATCH_SIZE, shuffle=False)"
-   ]
+    "shuffle(dataset)\n",
+    "train_set, test_set = train_test_split(dataset, test_size=0.15, random_state=42)\n",
+    "\n",
+    "train_loader = DataLoader(NLIDataset(train_set), batch_size=BATCH_SIZE, shuffle=True)\n",
+    "val_loader = DataLoader(NLIDataset(test_set), batch_size=BATCH_SIZE, shuffle=False)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 205 \"yes\" questions\n",
+      "Read 223 \"irrelevant\" questions\n",
+      "Read 243 \"no\" questions\n"
+     ]
+    }
+   ],
+   "execution_count": 50
   },
   {
    "cell_type": "code",
