--- a/seagull_story.ipynb
+++ b/seagull_story.ipynb
@@ -11,8 +11,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-30T23:32:38.326667Z",
-     "start_time": "2024-12-30T23:32:28.914222Z"
+     "end_time": "2024-12-31T01:10:15.381185Z",
+     "start_time": "2024-12-31T01:10:06.746621Z"
     }
    },
    "source": [
@@ -23,13 +23,13 @@
     "\n",
     "import numpy as np\n",
     "import torch\n",
-    "from nuitka.build.inline_copy.tqdm.tqdm import tqdm_pandas\n",
     "from sklearn.model_selection import train_test_split\n",
     "from tabulate import tabulate\n",
     "from torch.optim import AdamW\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "from tqdm import tqdm\n",
-    "from transformers import DebertaTokenizer, DebertaForSequenceClassification, get_linear_schedule_with_warmup"
+    "from transformers import DebertaTokenizer, DebertaForSequenceClassification, get_linear_schedule_with_warmup, AutoModel, \\\n",
+    "    AutoTokenizer, DebertaV2ForSequenceClassification, DebertaV2Tokenizer"
    ],
    "outputs": [],
    "execution_count": 1
@@ -45,8 +45,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-30T23:32:38.404625Z",
-     "start_time": "2024-12-30T23:32:38.350847Z"
+     "end_time": "2024-12-31T01:10:15.428223Z",
+     "start_time": "2024-12-31T01:10:15.391581Z"
     }
    },
    "source": [
@@ -57,7 +57,7 @@
     "}\n",
     "STORY_FILE = 'dataset/story.txt'\n",
     "DATASET_PATH = 'dataset/'\n",
-    "MODEL_NAME = \"microsoft/deberta-base\"\n",
+    "MODEL_NAME = \"microsoft/deberta-v3-base\"\n",
     "BATCH_SIZE = 8\n",
     "EPOCHS = 3\n",
     "LEARNING_RATE = 5e-5\n",
@@ -91,24 +91,38 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-30T23:32:40.066831Z",
-     "start_time": "2024-12-30T23:32:38.551590Z"
+     "end_time": "2024-12-31T01:11:22.252491Z",
+     "start_time": "2024-12-31T01:10:15.553916Z"
     }
    },
    "source": [
     "story = open(STORY_FILE).read().replace(\"\\n\\n\", \"\\n\").replace(\"\\n\", \" \")\n",
-    "tokenizer = DebertaTokenizer.from_pretrained(MODEL_NAME, do_lower_case=True)\n",
-    "model = DebertaForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=3, output_attentions=False,\n",
+    "tokenizer = DebertaV2Tokenizer.from_pretrained(MODEL_NAME, do_lower_case=True)\n",
+    "model = DebertaV2ForSequenceClassification.from_pretrained(MODEL_NAME, num_labels=3, output_attentions=False,\n",
     "                                                         output_hidden_states=False)\n",
     "model = model.to(DEVICE)\n",
     "pass"
    ],
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/371M [00:00<?, ?B/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "b27af1c78b834479aad168101d8e8772"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of DebertaForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-base and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
+      "Some weights of DebertaV2ForSequenceClassification were not initialized from the model checkpoint at microsoft/deberta-v3-base and are newly initialized: ['classifier.bias', 'classifier.weight', 'pooler.dense.bias', 'pooler.dense.weight']\n",
       "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
      ]
     }
@@ -1332,7 +1346,7 @@
     "    # Put the model into training mode. Don't be mislead--the call to\n",
     "    # `train` just changes the *mode*, it doesn't *perform* the training\n",
     "    model.train()\n",
-    "    for step, batch in tqdm(enumerate(train_loader)):\n",
+    "    for  batch in tqdm(train_loader):\n",
     "        b_input_ids = batch[\"input_ids\"].to(DEVICE)\n",
     "        b_token_type_ids = batch[\"token_type_ids\"].to(DEVICE)\n",
     "        b_attention_mask = batch[\"attention_mask\"].to(DEVICE)\n",
@@ -1357,6 +1371,7 @@
     "        loss = output.loss\n",
     "        logits = output.logits\n",
     "        total_train_loss += loss.item()\n",
+    "        print(np.argmax(logits, axis=1).flatten(), b_labels, flat_accuracy(logits, b_labels))\n",
     "        # Perform a backward pass to calculate the gradients.\n",
     "        loss.backward()\n",
     "        # Clip the norm of the gradients to 1.0.\n",
@@ -1376,7 +1391,7 @@
     "    # Measure how long this epoch took.\n",
     "    print(\"\")\n",
     "    print(\"  Average training loss: {0:.2f}\".format(avg_train_loss))\n",
-    "    print(\"  Training epoch took: {:} sec\".format((time.time() - t0) // 1e9))\n",
+    "    print(\"  Training epoch took: {:} sec\".format((time.time() - t0) ))\n",
     "\n",
     "    # ========================================\n",
     "    #               Validation\n",
@@ -1439,7 +1454,7 @@
     "        best_eval_accuracy = avg_val_accuracy\n",
     "\n",
     "    print(\"  Validation Loss: {0:.2f}\".format(avg_val_loss))\n",
-    "    print(\"  Validation took: {:} sec\".format((time.time() - t0) / 1e9))\n",
+    "    print(\"  Validation took: {:} sec\".format((time.time() - t0)))\n",
     "\n",
     "    # Record all statistics from this epoch.\n",
     "    training_stats.append(\n",
@@ -1453,7 +1468,7 @@
     "print(\"\")\n",
     "print(\"Training complete!\")\n",
     "\n",
-    "print(\"Total training took {:} (h:mm:ss)\".format((time.time() - total_t0) / 1e9))"
+    "print(\"Total training took {:} (h:mm:ss)\".format((time.time() - total_t0) ))"
    ],
    "outputs": [
     {
@@ -1502,8 +1517,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model.save_pretrained(\"nli-deberta-model\")\n",
-    "# tokenizer.save_pretrained(\"nli-deberta-model\")"
+    "model.save_pretrained(\"deberta_seagull\")\n",
+    "tokenizer.save_pretrained(\"deberta_tokenizer_seagull\")"
    ]
   }
  ],
