Start "Writing the story" section

--- a/seagull_story.ipynb
+++ b/seagull_story.ipynb
@@ -5,8 +5,8 @@
    "metadata": {
     "id": "6Gb-UDVPiJD_",
     "ExecuteTime": {
-     "end_time": "2025-01-01T16:23:31.036270Z",
-     "start_time": "2025-01-01T16:23:31.030766Z"
+     "end_time": "2025-01-01T18:37:54.935167Z",
+     "start_time": "2025-01-01T18:37:32.553901Z"
     }
    },
    "source": [
@@ -21,8 +21,17 @@
     "from transformers import AutoModelForSequenceClassification, AutoTokenizer, \\\n",
     "    TrainingArguments, Trainer"
    ],
-   "outputs": [],
-   "execution_count": 29
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\MrPio\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
